--- a/iOS/StarterKit.iOS.csproj
+++ b/iOS/StarterKit.iOS.csproj
@@ -103,6 +103,9 @@
     <BundleResource Include="Resources\Icon-Small-40%403x.png" />
     <BundleResource Include="Resources\Buttons\Login-Google.png" />
     <BundleResource Include="Resources\Buttons\Login-Facebook.png" />
+    <BundleResource Include="Resources\TabIcons\About%402x.png" />
+    <BundleResource Include="Resources\TabIcons\Binoculars%402x.png" />
+    <BundleResource Include="Resources\TabIcons\Contacts%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
