--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>Falcon</string>
-	<key>CFBundleIdentifier</key>
-	<string>money.gnarly.</string>
 	<key>CFBundleShortVersionString</key>
 	<string>0.1</string>
 	<key>CFBundleVersion</key>
@@ -59,5 +55,9 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>CFBundleDisplayName</key>
+	<string>StarterKit</string>
+	<key>CFBundleIdentifier</key>
+	<string>learning.template</string>
 </dict>
 </plist>
